NOISSUE - Update nginx version (#748)
* Update version of the Nginx image

Signed-off-by: Dušan Borovčanin <dusan.borovcanin@mainflux.com>

* Add undefined check for HTTP and WS

Signed-off-by: Dušan Borovčanin <dusan.borovcanin@mainflux.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,7 +21,7 @@ volumes:
 
 services:
   nginx:
-    image: nginx:1.14.2
+    image: nginx:1.16.0-alpine
     container_name: mainflux-nginx
     restart: on-failure
     volumes:
