--- a/docker/nginx/nginx-key.conf
+++ b/docker/nginx/nginx-key.conf
@@ -182,8 +182,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_pass http://ui:3000/;
-
+            proxy_pass http://ui:UI_PORT/;
             # Allow OPTIONS method CORS
             if ($request_method = OPTIONS ) {
                 add_header Content-Length 0;
